--- a/assets/video.css
+++ b/assets/video.css
@@ -201,7 +201,7 @@ video {
 		padding: 20px;
 		padding: calc(var(--plyr-control-spacing, 10px)*2)
 	}
-	
+
 }
 
 
@@ -765,16 +765,22 @@ a.plyr__control:before {
 	margin-right: var(--plyr-control-spacing, 10px)
 }
 
-@media(max-width:767px) {
+/* @media(max-width:767px) {
 	.plyr__time+.plyr__time {
 		display: none
 	}
-}
+} */
 
 
 @media(max-width:480px) {
-	.plyr__volume {
+	.plyr__controls__item .plyr__volume {
 		display: none; /* Hide volume slider on Android */
+	}
+}
+
+@media(max-width:320px) {
+	.plyr__controls .plyr__controls__item:first-child {
+		display: none; /* Hide rewind in extremely small screen */
 	}
 }
 
