--- a/assets/video.css
+++ b/assets/video.css
@@ -1522,13 +1522,14 @@ a.plyr__control:before {
 #plyr__time_skip {
 	background: #111111cc;
 	border: 0;
-	border-radius: 50%;
+	border-radius: 100%;
 	color: #fff;
 	left: 50%;
 	min-width: 60px;
 	width: 90px;
 	max-height: 90px;
 	opacity: 0;
+	transform: translate(-50%, -50%);
 	padding-top: 20px;
 	position: absolute;
 	top: 50%;
