--- a/assets/video.css
+++ b/assets/video.css
@@ -1522,13 +1522,17 @@ a.plyr__control:before {
 #plyr__time_skip {
 	background: #111111cc;
 	border: 0;
-	border-radius: 100%;
+	border-radius: 50%;
 	color: #fff;
 	left: 50%;
-	min-width: 60px;
-	width: 90px;
+	min-width: 80px;
+	width: min-content;
+	max-width: 100px;
 	max-height: 90px;
 	opacity: 0;
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
 	transform: translate(-50%, -50%);
 	padding-top: 20px;
 	position: absolute;
