--- a/dev_src/style_main.css
+++ b/dev_src/style_main.css
@@ -36,6 +36,7 @@
 body {
 	position: relative;
 	overflow-x: hidden;
+	top: 50px; /* Height of navbar */
 }
 
 #content_container {
@@ -370,6 +371,8 @@ right: 0%;
 .menu_options.disabled {
 	cursor: not-allowed;
 	background: #8c8c8c5b;
+	border: #222 solid 1px;
+	opacity: 0.7;
 }
 
 .menu_options.disabled:hover {
