--- a/dev_src/style_main.css
+++ b/dev_src/style_main.css
@@ -285,12 +285,12 @@ right: 0%;
 	background: var(--popup-btn-bg);
 	color: var(--popup-color);
 	border: var(--popup-btn-border);
-	border-radius: 6px; 
+	border-radius: 6px;
 }
 
 .popup-btn:hover, .popup-btn:active {
 	background: var(--popup-btn-bg-active);
-	
+
 }
 
 .popup-close-btn {
@@ -301,7 +301,7 @@ right: 0%;
 	height: 30px;
 	font-size: 25px;
 	font-weight: 600;
-	line-height: 30px; 
+	line-height: 30px;
 	text-align: center;
 }
 
@@ -321,7 +321,7 @@ right: 0%;
 .pagination {
 	cursor: pointer;
 	width: 150px;
-	max-width: 800px
+	max-width: min(800px , 70%)
 }
 
 .pagination {
@@ -458,7 +458,7 @@ ul{
 	height: auto;
 
 	pointer-events: none;
-	
+
 }
 
 
@@ -474,11 +474,11 @@ ul{
 	opacity: 0;
 	overflow-wrap: anywhere;
 	transform: translateY(100%);
-	
+
 	font-size: 1em;
 	color: #fff;
-	
-	
+
+
 	border-radius: 4px;
 	transition:
 		opacity 500ms,
@@ -777,7 +777,7 @@ ul{
 /* ************************************ */
 
 #progress-island {
-	display: block;
+	display: none;
 	position: fixed;
 	z-index: 6;
 	right: 65px;
@@ -789,7 +789,7 @@ ul{
 	background-color: #000000a3;
 	color: #fff;
 
-	
+
 
 	font-size: small;
 
@@ -804,9 +804,9 @@ ul{
 .progress_bar {
 	width: 97%;
 	text-align: left;
-	
+
 	padding: 5px 10px;
-	
+
 	border-style: solid;
 border-width: 2px 1px; /* 5px top and bottom, 20px on the sides */
 border-radius: 4px;
@@ -818,11 +818,11 @@ box-shadow: 0px 5px 5px -3px var(--popup-btn-bg-active);
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	
+
 	border: 1px solid white;
 	border-radius: 3px;
 	padding: 1px;
-	
+
 }
 
 .progress_bar_heading_text {
@@ -1026,3 +1026,31 @@ input#folder-name {
 	line-height: 40px;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  /* ************************************ */
+ /* **          Page segments         ** */
+/* ************************************ */
+
+.page {
+	display: none;
+}
+
+.page.active {
+	display: block;
+}
