fixed rename, added DEBUGGING flag in js for testing features
.debug_only elements will be hidden if DEBUGGING flag is on, using it for under development tools

--- a/dev_src/style_main.css
+++ b/dev_src/style_main.css
@@ -1078,6 +1078,10 @@ input#folder-name {
 	display: none;
 }
 
+.debug_only {
+	display: none;
+}
+
 
 
   /* ************************************ */
